# DynamicEQ

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DynamicEQ.jucer  README.md  init-vscode.ps1
.github/workflows/: release.yml
Builds/VisualStudio2026/: DynamicEQ.sln  DynamicEQ_SharedCode.vcxproj  DynamicEQ_SharedCode.vcxproj.filters  DynamicEQ_StandalonePlugin.vcxproj  DynamicEQ_VST3.vcxproj  DynamicEQ_VST3ManifestHelper.vcxproj  resources.rc
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: DynamicEQBand.h  SpectrumAnalyzer.h
Source/UI/: SpectrumComponent.h
